# leetcode-compensation

./: CONTRIBUTING.md  README.md  config.toml  index.html  pyproject.toml  requirements.txt  script.js
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: auto-merge.yml  data-refresh.yaml  deploy-site.yaml  manual-cleanup.yaml
data/: parsed_comps.json  parsed_comps.jsonl  raw_comps.jsonl
leetcomp/: clean.py  main.py  main2.py  parse.py  pyproject.toml  refresh.py  utils.py
leetcomp/queries/: post_details.gql
leetcomp/utils/: __init__.py  config.py  data_processing.py  helpers.py  leetcode_api.py
